--- a/index.html
+++ b/index.html
@@ -7,20 +7,42 @@ title: Home
   <br>
   <h4>Bio</h4>
   <p>
-    I am an incoming PhD student at the <a href="https://www.ufl.edu">University of Florida</a>, working with <a href="https://www.essie.ufl.edu/people/name/xilei-zhao/">Dr. Xilei Zhao</a> in the <a href="https://faculty.eng.ufl.edu/sermos-lab/">SERMoS Lab</a> at the intersection of <b>Artificial Intelligence</b> and <b>Transportation Engineering</b>. My current research focuses on developing interpretable machine learning models with fairness constraints for transportation systems, including a unified framework for addressing fairness across the entire travel modeling pipeline (trip generation, destination distribution, mode choice, and traffic assignment). I am also exploring bi-directional fairness frameworks to prevent biases from propagating between modeling stages.
+    I am an incoming PhD student at the <a href="https://www.ufl.edu">University
+      of Florida</a>, working with <a
+      href="https://www.essie.ufl.edu/people/name/xilei-zhao/">Dr. Xilei
+      Zhao</a> in the <a href="https://faculty.eng.ufl.edu/sermos-lab/">SERMoS
+      Lab</a> at the intersection of <b>Artificial Intelligence</b> and
+    <b>Transportation Engineering</b>. My current research focuses on developing
+    interpretable machine learning models with fairness constraints for
+    transportation systems, including a unified framework for addressing
+    fairness across the entire travel modeling pipeline (trip generation,
+    destination distribution, mode choice, and traffic assignment). I am also
+    exploring bi-directional fairness frameworks to prevent biases from
+    propagating between modeling stages.
   </p>
   <p>
-    I recently graduated from <a href="https://www.coloradocollege.edu">Colorado College</a> with a double major in <b>Computer Science</b> and <b>Mathematics</b>, where I developed <b>FORMAL</b>—an AI system that integrates Retrieval-Augmented Thinking and agentic feedback loops for translating informal mathematics into Lean 4 code with 92% syntactic correctness.
+    I recently graduated from <a href="https://www.coloradocollege.edu">Colorado
+      College</a> with a double major in <b>Computer Science</b> and
+    <b>Mathematics</b>, where I developed <b>FORMAL</b>—an AI system that
+    integrates Retrieval-Augmented Thinking and agentic feedback loops for
+    translating informal mathematics into Lean 4 code with 92% syntactic
+    correctness.
   </p>
   <p>
- My research interests include <b>LLM Agents</b>, <b>Trustworthy AI</b>, and <b>AI for Transportation</b>. I'm particularly excited about:
-</p>
-<ul>
-<li>Designing interpretable and fair AI models for transportation demand forecasting that balance predictive accuracy with equity considerations</li>
-<li>Developing integrated approaches to ensure fairness across multi-stage travel modeling pipelines</li>
-<li>Creating real-time digital twins powered by LLM-based agents for adaptive transportation systems monitoring and management</li>
-<li>Building robust validation frameworks for agent-based transportation models with resource-efficient architectures</li>
-</ul>
+    My research interests include <b>LLM Agents</b>, <b>Trustworthy AI</b>, and
+    <b>AI for Transportation</b>. I'm particularly excited about:
+  </p>
+  <ul>
+    <li>Designing interpretable and fair AI models for transportation demand
+      forecasting that balance predictive accuracy with equity
+      considerations</li>
+    <li>Developing integrated approaches to ensure fairness across multi-stage
+      travel modeling pipelines</li>
+    <li>Creating real-time digital twins powered by LLM-based agents for
+      adaptive transportation systems monitoring and management</li>
+    <li>Building robust validation frameworks for agent-based transportation
+      models with resource-efficient architectures</li>
+  </ul>
 </div>
 
 <!-- ========== NEWS ========== -->
@@ -37,9 +59,9 @@ title: Home
     <div class="tab-pane active" id="news-2025">
       {% assign news2025 = site.data.news.news | where: "year", "2025" %}
       {% for news in news2025 %}
-        <div class="news">
-          <li>{{ news.content }}</li>
-        </div>
+      <div class="news">
+        <li>{{ news.content }}</li>
+      </div>
       {% endfor %}
     </div>
 
@@ -92,15 +114,17 @@ title: Home
 <div class="docs-section" id="publications">
   <h4>Publications</h4>
   <ul class="tab-nav">
-    <li><div class="button active" data-ref="#papers-preprint">Preprint</div></li>
+    <li><div class="button active"
+        data-ref="#papers-preprint">Preprint</div></li>
     <li><div class="button" data-ref="#papers-2025">2025</div></li>
     <li><div class="button" data-ref="#papers-all">All</div></li>
   </ul>
-  
+
   <div class="tab-content">
     <!-- Tab: Preprint -->
     <div class="tab-pane active" id="papers-preprint">
-      {% assign paperspreprint = site.data.publications.papers | where: "year", "preprint" %}
+      {% assign paperspreprint = site.data.publications.papers | where: "year",
+      "preprint" %}
       {% for paper in paperspreprint %}
       <div class="paper">
         <div class="paper-container">
@@ -117,10 +141,12 @@ title: Home
             <p><i>{{ paper.venue }}</i></p>
             <div class="paper-buttons">
               {% if paper.paper_pdf %}
-              <a class="button" href="{{ paper.paper_pdf }}" target="_blank">Paper</a>
+              <a class="button" href="{{ paper.paper_pdf }}" target="_blank"><i
+                  class="fa fa-file" aria-hidden="true"></i> Paper</a>
               {% endif %}
               {% if paper.code %}
-              <a class="button" href="{{ paper.code }}" target="_blank">Code</a>
+              <a class="button" href="{{ paper.code }}" target="_blank"><i
+                  class="fa fa-code" aria-hidden="true"></i> Code</a>
               {% endif %}
             </div>
           </div>
@@ -128,10 +154,11 @@ title: Home
       </div>
       {% endfor %}
     </div>
-    
+
     <!-- Tab: 2025 -->
     <div class="tab-pane" id="papers-2025">
-      {% assign papers2025 = site.data.publications.papers | where: "year", "2025" %}
+      {% assign papers2025 = site.data.publications.papers | where: "year",
+      "2025" %}
       {% for paper in papers2025 %}
       <div class="paper">
         <div class="paper-container">
@@ -148,10 +175,12 @@ title: Home
             <p><i>{{ paper.venue }}</i></p>
             <div class="paper-buttons">
               {% if paper.paper_pdf %}
-              <a class="button" href="{{ paper.paper_pdf }}" target="_blank">Paper</a>
+              <a class="button" href="{{ paper.paper_pdf }}" target="_blank"><i
+                  class="fa fa-file" aria-hidden="true"></i> Paper</a>
               {% endif %}
               {% if paper.code %}
-              <a class="button" href="{{ paper.code }}" target="_blank">Code</a>
+              <a class="button" href="{{ paper.code }}" target="_blank"><i
+                  class="fa fa-code" aria-hidden="true"></i> Code</a>
               {% endif %}
             </div>
           </div>
@@ -159,7 +188,7 @@ title: Home
       </div>
       {% endfor %}
     </div>
-    
+
     <!-- Tab: All Papers -->
     <div class="tab-pane" id="papers-all">
       {% assign papersall = site.data.publications.papers %}
@@ -179,10 +208,12 @@ title: Home
             <p><i>{{ paper.venue }}</i></p>
             <div class="paper-buttons">
               {% if paper.paper_pdf %}
-              <a class="button" href="{{ paper.paper_pdf }}" target="_blank">Paper</a>
+              <a class="button" href="{{ paper.paper_pdf }}" target="_blank"><i
+                  class="fa fa-file" aria-hidden="true"></i> Paper</a>
               {% endif %}
               {% if paper.code %}
-              <a class="button" href="{{ paper.code }}" target="_blank">Code</a>
+              <a class="button" href="{{ paper.code }}" target="_blank"><i
+                  class="fa fa-code" aria-hidden="true"></i> Code</a>
               {% endif %}
             </div>
           </div>
@@ -196,7 +227,7 @@ title: Home
 <!-- ========== PROJECTS ========== -->
 <div class="docs-section" id="projects">
   <h4>Projects</h4>
-  
+
   <div class="tab-content">
     <!-- Tab: All Projects -->
     <div class="tab-pane-active" id="papers-all">
@@ -218,10 +249,13 @@ title: Home
             <p><i>{{ project.venue }}</i></p>
             <div class="paper-buttons">
               {% if project.paper_pdf %}
-              <a class="button" href="{{ project.paper_pdf }}" target="_blank">Paper</a>
+              <a class="button" href="{{ project.paper_pdf }}"
+                target="_blank"><i class="fa fa-file" aria-hidden="true"></i>
+                Paper</a>
               {% endif %}
               {% if project.code %}
-              <a class="button" href="{{ project.code }}" target="_blank">Code</a>
+              <a class="button" href="{{ project.code }}" target="_blank"><i
+                  class="fa fa-code" aria-hidden="true"></i> Code</a>
               {% endif %}
             </div>
           </div>
@@ -241,12 +275,12 @@ title: Home
 
 </div> -->
 
-
 <!-- ========== RESUME ========== -->
 <div class="docs-section" id="resume">
   <h4>Vitæ</h4>
 
-  <p>Full CV in <a href="{{ site.data.main_info.cv }}" target="_blank" style="text-decoration: none;">PDF</a>.</p>
+  <p>Full CV in <a href="{{ site.data.main_info.cv }}" target="_blank"
+      style="text-decoration: none;">PDF</a>.</p>
 
   <!-- The Timeline -->
   <ul class="timeline">
@@ -254,16 +288,18 @@ title: Home
     <li>
       {% if exp.category == "left" %}
       <div class="direction-l">
-      {% else %}
-      <div class="direction-r">
-      {% endif %}
-        <div class="flag-wrapper">
-          <span class="flag">{{ exp.place }}</span>
-          <span class="time-wrapper"><span class="time">{{ exp.time }}</span></span>
+        {% else %}
+        <div class="direction-r">
+          {% endif %}
+          <div class="flag-wrapper">
+            <span class="flag">{{ exp.place }}</span>
+            <span class="time-wrapper"><span class="time">{{ exp.time
+                }}</span></span>
+          </div>
+          <div class="desc"><b>{{ exp.title }}</b> <br /> {{ exp.subtitle
+            }}</div>
         </div>
-        <div class="desc"><b>{{ exp.title }}</b> <br/> {{ exp.subtitle }}</div>
-      </div>
-    </li>
-    {% endfor %}
-  </ul>
-</div>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
