updated navigation style

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ title: Home
     propagating between modeling stages.
   </p>
   <p>
-    I recently graduated from <a href="https://www.coloradocollege.edu">Colorado
-      College</a> with a double major in <b>Computer Science</b> and
+    I will graduating from <a href="https://www.coloradocollege.edu">Colorado
+      College</a> this May with a double major in <b>Computer Science</b> and
     <b>Mathematics</b>, where I developed <b>FORMAL</b>—an AI system that
     integrates Retrieval-Augmented Thinking and agentic feedback loops for
     translating informal mathematics into Lean 4 code with 92% syntactic
