updated email button

--- a/index.html
+++ b/index.html
@@ -279,8 +279,13 @@ title: Home
 <div class="docs-section" id="resume">
   <h4>Vitæ</h4>
 
-  <p>Full CV in <a href="{{ site.data.main_info.cv }}" target="_blank"
-      style="text-decoration: none;">PDF</a>.</p>
+  <div class="paper-buttons">
+    <a class="button" href="{{ site.data.main_info.cv }}"
+      target="_blank">
+      <i class="fa fa-file"
+        aria-hidden="true"></i><span>CV</span>
+    </a>
+  </div>
 
   <!-- The Timeline -->
   <ul class="timeline">
