added image pop up

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ title: Home
               <div class="paper-buttons">
                 {% if project.website %}
                 <a class="button" href="{{ project.website }}"
-                  target="_blank"><i class="fa fa-external-link"
+                  target="_blank"><i class="fa fa-link"
                     aria-hidden="true"></i>
                   Website</a>
                 {% endif %}
